0.8.0/_sources/gallery/add_points_with_text.rst

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/add_points_with_text.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_add_points_with_text.py:


Add points with text
====================

Display a points layer on top of an image layer using the ``add_points`` and
``add_image`` APIs

.. tags:: visualization-basic

.. GENERATED FROM PYTHON SOURCE LINES 10-58



.. image-sg:: /gallery/images/sphx_glr_add_points_with_text_001.png
   :alt: add points with text
   :srcset: /gallery/images/sphx_glr_add_points_with_text_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    /home/runner/work/docs/docs/.venv/lib/python3.12/site-packages/napari/_qt/qt_event_loop.py:50: UserWarning: System theme detection requires a Qt6 backend. Please switch to PyQt6 or PySide6 to use it.
      theme_type=get_system_theme(),
    /home/runner/work/docs/docs/.venv/lib/python3.12/site-packages/napari/_qt/qt_event_loop.py:50: UserWarning: System theme detection requires a Qt6 backend. Please switch to PyQt6 or PySide6 to use it.
      theme_type=get_system_theme(),






|

.. code-block:: Python


    import numpy as np

    import napari

    # add the image
    viewer = napari.Viewer()
    layer = viewer.add_image(np.zeros((400, 400)))
    # add the points
    points = np.array([[100, 100], [200, 300], [333, 111]])

    # create features for each point
    features = {
        'confidence': np.array([1, 0.5, 0]),
        'good_point': np.array([True, False, False]),
    }

    # define the color cycle for the face_color annotation
    face_color_cycle = ['blue', 'green']

    text = {
        'string': 'Confidence is {confidence:.2f}',
        'size': 20,
        'color': 'green',
        'translation': np.array([-30, 0]),
    }

    # create a points layer where the face_color is set by the good_point feature
    # and the border_color is set via a color map (grayscale) on the confidence
    # feature.
    points_layer = viewer.add_points(
        points,
        features=features,
        text=text,
        size=20,
        border_width=7,
        border_width_is_relative=False,
        border_color='confidence',
        border_colormap='gray',
        face_color='good_point',
        face_color_cycle=face_color_cycle,
    )

    # set the border_color mode to colormap
    points_layer.border_color_mode = 'colormap'

    if __name__ == '__main__':
        napari.run()


.. _sphx_glr_download_gallery_add_points_with_text.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: add_points_with_text.ipynb <add_points_with_text.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: add_points_with_text.py <add_points_with_text.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: add_points_with_text.zip <add_points_with_text.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
